# docs/swagger.yaml
@@ -158,6 +158,10 @@ paths:
         in: query
         name: subject_type
         type: string
+      - description: Size (original, small, medium, large)
+        in: query
+        name: size
+        type: string
       produces:
       - application/json
       responses:
@@ -179,6 +183,46 @@ paths:
       security:
       - BearerAuth: []
       summary: List galleries
+      tags:
+      - galleries
+  /galleries/{group_code}:
+    get:
+      consumes:
+      - application/json
+      description: Show galleries by group code
+      parameters:
+      - description: Group Code
+        in: path
+        name: group_code
+        required: true
+        type: string
+      - description: Size (original, small, medium, large)
+        in: query
+        name: size
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/nova-cdn_pkg_utils.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/internal_controllers.GallerySwagger'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/nova-cdn_pkg_utils.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/nova-cdn_pkg_utils.Response'
+      security:
+      - BearerAuth: []
+      summary: Show galleries by group code
       tags:
       - galleries
   /galleries/{id}:
